Add API for returning ProfilePortfolio.
