# pwt-web-api/src/main/java/ac/obl/paywent/web/profile/ProfilesApiImpl.java
@@ -1,9 +1,12 @@
 package ac.obl.paywent.web.profile;
 
+import ac.obl.paywent.domain.ProfileId;
 import ac.obl.paywent.profile.AddProfile;
+import ac.obl.paywent.profile.FindProfilePortfolio;
 import ac.obl.paywent.profile.ListProfiles;
 import ac.obl.paywent.web.ProfilesApi;
 import ac.obl.paywent.web.model.NewProfileRequest;
+import ac.obl.paywent.web.model.ProfilePortfolioResponse;
 import ac.obl.paywent.web.model.ProfileResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -17,33 +20,39 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class ProfilesApiImpl implements ProfilesApi {
 
-	private final AddProfile addProfile;
-	private final ListProfiles listProfiles;
-	private final ProfilesApiMapper mapper;
+    private final AddProfile addProfile;
+    private final ListProfiles listProfiles;
+    private final ProfilesApiMapper mapper;
 
-	@Override
-	public ResponseEntity<Void> _deleteProfileId(final String id) {
-		throw new UnsupportedOperationException("Not implemented yet");
-	}
+    private final FindProfilePortfolio findProfilePortfolio;
 
-	@Override
-	public ResponseEntity<ProfileResponse> _getProfileId(final String id) {
-		throw new UnsupportedOperationException("Not implemented yet");
-	}
+    @Override
+    public ResponseEntity<Void> _deleteProfileId(final String id) {
+        throw new UnsupportedOperationException("Not implemented yet");
+    }
 
-	@Override
-	public ResponseEntity<List<ProfileResponse>> _getProfiles() {
-		return ResponseEntity.ok(
-				listProfiles.invoke()
-						.stream()
-						.map(mapper::mapToProfileResponse)
-						.collect(Collectors.toList())
-		);
-	}
+    @Override
+    public ResponseEntity<ProfilePortfolioResponse> _getProfileId(final String id) {
+        return ResponseEntity.of(
+            findProfilePortfolio
+                .invoke(new ProfileId(id))
+                .map(mapper::mapToProfilePortfolioResponse)
+        );
+    }
 
-	@Override
-	public ResponseEntity<ProfileResponse> _postProfiles(final NewProfileRequest newProfileRequest) {
-		final var createdProfile = addProfile.invoke(mapper.mapToNewProfile(newProfileRequest));
-		return ResponseEntity.status(HttpStatus.CREATED).body(mapper.mapToProfileResponse(createdProfile));
-	}
+    @Override
+    public ResponseEntity<List<ProfileResponse>> _getProfiles() {
+        return ResponseEntity.ok(
+            listProfiles.invoke()
+                .stream()
+                .map(mapper::mapToProfileResponse)
+                .collect(Collectors.toList())
+        );
+    }
+
+    @Override
+    public ResponseEntity<ProfileResponse> _postProfiles(final NewProfileRequest newProfileRequest) {
+        final var createdProfile = addProfile.invoke(mapper.mapToNewProfile(newProfileRequest));
+        return ResponseEntity.status(HttpStatus.CREATED).body(mapper.mapToProfileResponse(createdProfile));
+    }
 }
